--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
 				<h3>Your Character</h3>
 			</div>
 			<div class="row col-sm-8"  id="characters">
-			<!-- Amberle -->
-					<div class="col-sm-2" id="amberle">				
-						<button class="character amberle" value="amberle">
-							<div class="row text-center name">Amberle</div>
-							<img class="row text-center" src="assets/images/amberle.jpg">
-							<div class="row text-center" id="amberleHP">XXX</div>
+			<!-- Fury -->
+					<div class="col-sm-2" id="fury">				
+						<button class="character fury" value="fury">
+							<div class="row text-center name">fury</div>
+							<img class="row text-center" src="assets/images/fury.jpg">
+							<div class="row text-center" id="furyHP">XXX</div>
 						</button>					
 					</div>
-			<!-- Eretria -->
-					<div class="col-sm-2" id="eretria">				
-						<button class="character eretria" value="eretria">
-							<div class="row text-center name">Eretria</div>
-							<img class="row text-center" src="assets/images/eretria.jpg">
-							<div class="row text-center" id="eretriaHP">YYY</div>
+			<!-- Riga -->
+					<div class="col-sm-2" id="riga">				
+						<button class="character riga" value="riga">
+							<div class="row text-center name">riga</div>
+							<img class="row text-center" src="assets/images/riga.jpg">
+							<div class="row text-center" id="rigaHP">YYY</div>
 						</button>					
 					</div>
 			<!-- Dagda Mor -->
 					<div class="col-sm-2" id="dagdaMor">				
 						<button class="character dagdaMor" value="dagdaMor">
 							<div class="row text-center name">Dagda mor</div>
-							<img class="row text-center" src="assets/images/dagdaMor.jpg">
+							<img class="row text-center" src="assets/images/dagdaMor1.jpg">
 							<div class="row text-center" id="dagdaMorHP">ZZZ</div>
 						</button>					
 					</div>
@@ -50,7 +50,7 @@
 					<div class="col-sm-2" id="bandon">			
 						<button class="character bandon" value="bandon">
 							<div class="row text-center name">Bandon</div>
-							<img class="row text-center" src="assets/images/bandon.jpg">
+							<img class="row text-center" src="assets/images/bandon1.jpg">
 							<div class="row text-center" id="bandonHP">AAA</div>
 						</button>					
 					</div>					
@@ -58,7 +58,9 @@
 		</section>
 <!-- Enemies to Fight pictures -->
 		<section class="container-fluid">	
-			<h3>Enemies Available to Attack</h3>
+			<div class="row">
+				<h3>Enemies Available to Attack</h3>
+			</div>
 			<div class="row" id="enemies">		
 			</div>
 		</section>
@@ -68,14 +70,15 @@
 				<h3>Fight Section</h3> 
 			</div>
 			<div class="row">
-				<button class="btn btn-default">Attack!</button>
+				<button class="btn btn-default btn-xs attack">Attack!</button>
 			</div>
 		</section>
 <!-- Defender and naration about game -->
 		<section class="container-fluid">
 			<div class="row">
-				<div id="defenderArea"></div>
 				<h3>Defender</h3>
+			</div>
+			<div class="row" id="defenderArea">
 			</div>
 			<div class="row">
 				<div id="narration">The Words go here</div>
