--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="container-fluid" id="mainContainer">
 		<header class="float-right" id="header">
-			<h2>Shannara RPG</h2>
+			<h1>Shannara RPG</h1>
 		</header>
 <!-- Characters to choose from and Your Character -->
 		<section class="container-fluid">
@@ -61,7 +61,7 @@
 			<div class="row">
 				<h3>Enemies Available to Attack</h3>
 			</div>
-			<div class="row" id="enemies">		
+			<div class="row col-sm-8" id="enemies">		
 			</div>
 		</section>
 <!-- Fight section with button -->
