--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Characters to choose from and Your Character -->
 		<section id="characterSection" class="container-fluid">
 			<div class="row">
-				<h3>Your Character</h3>
+				<h3 id="yourCharacter">Click on a player to choose your character.</h3>
 			</div>
 			<div class="row col-sm-12"  id="characters">
 			<!-- Fury -->
@@ -76,7 +76,7 @@
 <!-- Defender and naration about game -->
 		<section class="container-fluid">
 			<div class="row">
-				<h3>Defender</h3>
+				<h3 id="defender">Defender</h3>
 			</div>
 			<div class="row" id="defenderArea">
 			</div>
