--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		</header>
 <!-- Characters to choose from and Your Character -->
 		<section id="characterSection" class="container-fluid">
-			<div class="row">
-				<h3 id="yourCharacter">Click on a player to choose your character.</h3>
+			<div id="top" class="row text-center">
+				<h3 id="yourCharacter">Click on a player to choose your character</h3>
 			</div>
 			<div class="row col-sm-12"  id="characters">
 			<!-- Fury -->
@@ -59,7 +59,7 @@
 <!-- Enemies to Fight pictures -->
 		<section class="container-fluid">	
 			<div class="row">
-				<h3>Enemies Available to Attack</h3>
+				<h3 id="availEnemies">Enemies Available to Attack</h3>
 			</div>
 			<div class="row col-sm-12" id="enemies">		
 			</div>
@@ -67,7 +67,7 @@
 <!-- Fight section with button -->
 		<section class="container-fluid">
 			<div class="row">
-				<h3>Fight Section</h3> 
+				<h3 id="fightSection">Fight Section</h3> 
 			</div>
 			<div class="row">
 				<button class="attack">Attack!</button>
