--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<body>
+<body id="body">
 	<div class="container-fluid" id="mainContainer">
 		<header class="float-right" id="header">
 			<h1>Shannara RPG</h1>
