--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<!-- Fury -->
 					<div id="fury">				
 						<button class="character fury" value="fury">
-							<div class="row text-center name">Fury</div>
+							<div class="row text-center name" id="namefury">Fury</div>
 							<img class="row text-center" src="assets/images/fury.jpg">
 							<div class="row text-center" id="furyHP">XXX</div>
 						</button>					
@@ -33,7 +33,7 @@
 			<!-- Riga -->
 					<div id="riga">				
 						<button class="character riga" value="riga">
-							<div class="row text-center name">Riga</div>
+							<div class="row text-center name" id="nameriga">Riga</div>
 							<img class="row text-center" src="assets/images/riga.jpg">
 							<div class="row text-center" id="rigaHP">YYY</div>
 						</button>					
@@ -41,7 +41,7 @@
 			<!-- Dagda Mor -->
 					<div id="dagdaMor">				
 						<button class="character dagdaMor" value="dagdaMor">
-							<div class="row text-center name">Dagda Mor</div>
+							<div class="row text-center name" id="namedagdaMor">Dagda Mor</div>
 							<img class="row text-center" src="assets/images/dagdaMor1.jpg">
 							<div class="row text-center" id="dagdaMorHP">ZZZ</div>
 						</button>					
@@ -49,7 +49,7 @@
 			<!-- Bandon -->
 					<div id="bandon">			
 						<button class="character bandon" value="bandon">
-							<div class="row text-center name">Bandon</div>
+							<div class="row text-center name" id="namebandon">Bandon</div>
 							<img class="row text-center" src="assets/images/bandon1.jpg">
 							<div class="row text-center" id="bandonHP">AAA</div>
 						</button>					
